@@ -1,7 +1,9 @@
 1.4.2 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Configure bytecode caching by default. Introduce `jinja2.bytecode_caching`
+  and `jinja2.bytecode_caching_directory` settings.
+  [Domen Kožar]
 
 
 1.4.1 (2012-09-12)
